Small bugs that cropped up from playtesting

--- a/src/components/Guess.less
+++ b/src/components/Guess.less
@@ -73,6 +73,7 @@
 }
 
 .Guess__error--dark {
+	background-color: @dark-01;
 	color: @errorDark;
 }
 
